# exercicios-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: coverage_badge.yml
exercicios/01_essencial/boas_vindas/: _README.md  main.py
exercicios/01_essencial/boas_vindas/tests/: test_.py
exercicios/01_essencial/cadastro/: _README.md  main.py
exercicios/01_essencial/cadastro/tests/: test_.py
exercicios/01_essencial/combina_lista/: main.py
exercicios/01_essencial/crescimento_populacao/: main.py
exercicios/01_essencial/desconto/: main.py
exercicios/01_essencial/divisor_comum/: main.py
exercicios/01_essencial/fibonacci/: main.py
exercicios/01_essencial/idade/: _README.md  main.py
exercicios/01_essencial/idade/tests/: test_.py
exercicios/01_essencial/maior_menor/: main.py
exercicios/01_essencial/numero_maior/tests/: test_.py
exercicios/01_essencial/pescador/: main.py
exercicios/01_essencial/quantidade_preco/: main.py
exercicios/01_essencial/temperatura/: main.py
exercicios/01_essencial/triangulo/: main.py
exercicios/01_essencial/usuario_senha/: main.py
