[project]
name = "curso-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Raiane Cardoso",email = "166438302+raianecardoso@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)",
    "pytest-local-badge (>=1.3.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.taskipy.tasks]
test = { cmd = "pytest", help = "Runs all unit tests." }
new-exec = { cmd = "poetry run python scripts/cria_pasta.py", help = "Add new exec folder." }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
